--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docusaurus-docgen",
-  "version": "0.1.0",
-  "author": "prc5",
+  "version": "0.0.0",
+  "author": "BetterTyped",
   "license": "MIT",
   "description": "Docs generator",
   "repository": "BetterTyped/docusaurus-docgen",
