--- a/package.json
+++ b/package.json
@@ -116,8 +116,6 @@
     "ts-jest": "^28.0.5",
     "ts-node": "~10.8.0",
     "tslib": "^2.3.0",
-    "typedoc": "^0.23.17",
-    "typedoc-plugin-markdown": "^3.13.6",
     "typescript": "^4.8.4"
   },
   "dependencies": {
@@ -127,7 +125,9 @@
     "mdx-mermaid": "^1.2.1",
     "node-html-markdown": "^1.2.2",
     "node-html-parser": "^6.1.1",
-    "remark-admonitions": "^1.2.1"
+    "remark-admonitions": "^1.2.1",
+    "typedoc": "^0.23.17",
+    "typedoc-plugin-markdown": "^3.13.6"
   },
   "files": [
     "dist"
