--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,46 +1,36 @@
 {
-  "include": ["src", "types"],
+  "compileOnSave": false,
   "compilerOptions": {
     "jsx": "react",
-    "module": "esnext",
-    "target": "esnext",
-    "lib": ["esNext", "dom", "dom.iterable"],
-    "importHelpers": true,
-    // output .d.ts declaration files for consumers
-    "declaration": true,
-    // output .js.map sourcemap files for consumers
+    "rootDir": ".",
     "sourceMap": true,
-    // match output dir to input dir. e.g. dist/index instead of dist/src/index
-    "rootDir": "./src",
-    // stricter type-checking for stronger correctness. Recommended by TS
-    "strict": true,
-    // linter checks for common issues
-    // "noImplicitReturns": true,
-    // "noFallthroughCasesInSwitch": true,
-    // noUnused* overlap with @typescript-eslint/no-unused-vars, can disable if duplicative
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // use Node's module resolution algorithm, instead of the legacy TS one
+    "declaration": true,
+    "emitDeclarationOnly": true,
     "moduleResolution": "node",
-    // interop between ESM and CJS modules. Recommended by TS
-    "esModuleInterop": true,
-    // significant perf increase by skipping checking .d.ts files, particularly those in node_modules. Recommended by TS
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
+    "target": "es6",
+    "module": "esnext",
+    "lib": ["es2017", "dom", "dom.iterable"],
     "skipLibCheck": true,
-    // error out if import and file system have a casing mismatch. Recommended by TS
-    // "forceConsistentCasingInFileNames": true,
-    // `tsdx build` ignores this option, but it is commonly used when type-checking separately with `tsc`
-    "noEmit": true,
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
+    "skipDefaultLibCheck": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "downlevelIteration": true,
-    "baseUrl": "src",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
     "noImplicitReturns": false,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {},
+    "plugins": [
+      {
+        "transform": "@zerollup/ts-transform-paths"
+      }
+    ]
   },
-  "plugins": [{ "transform": "@zerollup/ts-transform-paths" }],
   "exclude": ["node_modules"]
 }
