--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es6",
+    "target": "esnext",
     "module": "esnext",
     "lib": ["es2017", "dom", "dom.iterable"],
     "skipLibCheck": true,
