--- a/package.json
+++ b/package.json
@@ -127,7 +127,8 @@
     "node-html-parser": "^6.1.1",
     "remark-admonitions": "^1.2.1",
     "typedoc": "^0.23.17",
-    "typedoc-plugin-markdown": "^3.13.6"
+    "typedoc-plugin-markdown": "^3.13.6",
+    "unified": "^10.1.2"
   },
   "files": [
     "dist"
