--- a/package.json
+++ b/package.json
@@ -126,9 +126,11 @@
     "node-html-markdown": "^1.2.2",
     "node-html-parser": "^6.1.1",
     "remark-admonitions": "^1.2.1",
+    "remark-parse": "^10.0.1",
     "typedoc": "^0.23.17",
     "typedoc-plugin-markdown": "^3.13.6",
-    "unified": "^10.1.2"
+    "unified": "^10.1.2",
+    "unist-util-visit": "^4.1.1"
   },
   "files": [
     "dist"
