--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Docs generator",
   "repository": "BetterTyped/docusaurus-docgen",
   "type": "module",
-  "main": "dist/index.cjs.js",
+  "main": "dist/index.esm.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "typings": "dist/index.d.ts",
