chore: 🤖 fix imports + added missing package in package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "license": "MIT",
   "description": "Docs generator",
   "repository": "BetterTyped/docusaurus-docgen",
-  "type": "module",
   "main": "dist/index.esm.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -126,6 +125,7 @@
     "mdx-mermaid": "^1.2.1",
     "node-html-markdown": "^1.2.2",
     "node-html-parser": "^6.1.1",
+    "react-dom": ">= 16.8.0",
     "remark-admonitions": "^1.2.1",
     "remark-parse": "^10.0.1",
     "typedoc": "^0.23.17",
