feat: 🎸 Bundling adjustments

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "description": "Docs generator",
   "repository": "BetterTyped/docusaurus-docgen",
-  "type": "module",
+  "type": "commonjs",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "start": "rollup -c -w",
-    "build": "tsc --build",
+    "build": "rollup -c",
     "prepare": "install-peers && yarn husky install",
     "lint": "eslint . --ext .js,.jsx,.tsx,.ts --fix",
     "test": "jest",
