--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "jsx": "react",
     "rootDir": ".",
+    "outDir": "./dist",
     "sourceMap": true,
     "declaration": true,
     "emitDeclarationOnly": true,
