--- a/package.json
+++ b/package.json
@@ -79,14 +79,14 @@
     "@types/react-dom": "^18.0.6",
     "@types/rimraf": "^3.0.2",
     "@types/turndown": "^5.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.0",
+    "@typescript-eslint/parser": "^6.13.0",
     "@zerollup/ts-transform-paths": "^1.7.18",
     "chalk": "^4.1.2",
     "commitlint": "^17.0.2",
     "eslint": "^8.17.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
@@ -116,21 +116,22 @@
     "ts-jest": "^28.0.5",
     "ts-node": "~10.8.0",
     "tslib": "^2.3.0",
-    "typescript": "^4.8.4"
+    "typescript": "^5.3.2"
   },
   "dependencies": {
     "@docusaurus/plugin-content-docs": "2.0.0-beta.20",
     "fs-extra": "^10.0.0",
     "isomorphic-dompurify": "^0.23.0",
+    "mdast-util-from-markdown": "^2.0.0",
+    "mdast-util-mdx": "^3.0.0",
     "mdx-mermaid": "^1.2.1",
+    "micromark-extension-mdxjs": "2.0.0",
     "node-html-markdown": "^1.2.2",
     "node-html-parser": "^6.1.1",
     "remark-admonitions": "^1.2.1",
-    "remark-parse": "8.0.3",
-    "typedoc": "^0.23.17",
-    "typedoc-plugin-markdown": "^3.13.6",
-    "unified": "9.2.2",
-    "unist-util-visit": "2.0.3"
+    "typedoc": "^0.25.3",
+    "typedoc-plugin-markdown": "^3.17.1",
+    "unist-util-visit": "5.0.0"
   },
   "files": [
     "dist"
