--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "description": "Docs generator",
   "repository": "BetterTyped/docusaurus-docgen",
-  "type": "commonjs",
+  "type": "module",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -56,11 +56,6 @@
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.2",
     "@docusaurus/types": "2.0.0-beta.20",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^22.0.2",
-    "@rollup/plugin-json": "^5.0.1",
-    "@rollup/plugin-node-resolve": "^14.1.0",
-    "@rollup/plugin-sucrase": "^5.0.1",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
@@ -106,10 +101,10 @@
     "prettier": "^2.6.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rollup": "^2.79.1",
+    "rollup": "^4.6.1",
     "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^4.2.2",
-    "rollup-plugin-esbuild": "^4.10.1",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-esbuild": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "semantic-release": "^19.0.5",
     "size-limit": "^7.0.5",
